--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,21 +1,27 @@
 [package]
 name = "inth-oauth2"
-version = "0.16.0"
+version = "0.17.0-fork"
 
 description = "OAuth2 client"
 keywords = ["authentication", "authorization", "auth", "oauth"]
 
-authors = ["Curtis McEnroe <programble@gmail.com>"]
+authors = ["Curtis McEnroe <programble@gmail.com>", "Alexander Korolev <kilork@yandex.ru>"]
 license = "ISC"
 
-repository = "https://github.com/programble/inth-oauth2"
+repository = "https://github.com/kilork/inth-oauth2"
 readme = "README.md"
+edition = "2018"
 
 [dependencies]
 chrono = { version = "0.4", features = ["serde"] }
-lazy_static = "1.1.0"
-serde = "1.0.8"
-serde_derive = "1.0.5"
-serde_json = "1.0.2"
-url = "1.1.0"
-reqwest = "0.9.2"
+lazy_static = "1.4.0"
+serde = "1"
+serde_derive = "1"
+serde_json = "1"
+url = "2.1"
+
+[dependencies.reqwest]
+version = "0.10"
+features = [
+    "json", "blocking"
+]
